# Exercises-Solutions

Exercises/Cpp_common/: wtime.c
Exercises/Exercise01/Cpp/: DeviceInfo.cpp
Exercises/Exercise03/Cpp/: vadd.cpp
Exercises/Exercise04/Cpp/: vadd.cpp
Exercises/Exercise06/Cpp/: matmul.cpp
Exercises/Exercise09/Cpp/: pi.cpp
Exercises/cmake/: CMakeLists.txt
Solutions/Exercise04/Cpp/: vadd_chain.cpp
Solutions/Exercise05/Cpp/: vadd_abc.cpp
Solutions/Exercise06/Cpp/: matmul.cpp
Solutions/Exercise07/Cpp/: matmul.cpp
Solutions/Exercise08/Cpp/: matmul.cpp
Solutions/Exercise09/Cpp/: pi_ocl.cpp
Solutions/ExerciseA/Cpp/: pi_vocl.cpp
